# safeparts

./: .dockerignore  .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRD.md  README.ar.md  README.md  llms-full.txt  llms.txt  mise.toml  netlify.toml  plan.md  wrangler.jsonc
.agents/: AGENTS.md
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  dx_improvement.md  feature_request.md  security_note.md
.github/workflows/: ci.yml  cloudflare-workers.yml  docker-publish.yml  macos-ci.yml  mobile-ci.yml  release.yml  rust-ci.yml  web-ci.yml  windows-native-ci.yml
crates/: AGENTS.md
crates/safeparts/: AGENTS.md  Cargo.toml
crates/safeparts/src/: main.rs
crates/safeparts/tests/: e2e.rs
crates/safeparts_core/: AGENTS.md  Cargo.toml
crates/safeparts_core/src/: crypto.rs  encoding.rs  error.rs  lib.rs  mnemo_bip39.rs  mnemo_words.rs  packet.rs  sss.rs
crates/safeparts_swift/: Cargo.toml
crates/safeparts_swift/src/: lib.rs
crates/safeparts_tui/: AGENTS.md  Cargo.toml
crates/safeparts_tui/src/: app.rs  clipboard.rs  domain.rs  main.rs
crates/safeparts_uniffi/: Cargo.toml  uniffi.toml
crates/safeparts_uniffi/src/: lib.rs
crates/safeparts_uniffi/tests/: native_api.rs
crates/safeparts_wasm/: AGENTS.md  Cargo.toml
crates/safeparts_wasm/src/: lib.rs
crates/ssss_mnemo_cli/: Cargo.toml
crates/ssss_mnemo_cli/src/: main.rs
crates/ssss_mnemo_cli/tests/: e2e.rs
crates/ssss_mnemo_core/: Cargo.toml
crates/ssss_mnemo_core/src/: ascii.rs  error.rs  gf256.rs  lib.rs  mnemo_bip39.rs  mnemo_words.rs  packet.rs
crates/ssss_mnemo_wasm/: Cargo.toml
crates/ssss_mnemo_wasm/src/: lib.rs
desktop/: AGENTS.md  index.html  package.json  tailwind.config.cjs  vite.config.ts
desktop/src/: AGENTS.md  App.tsx  commands.ts  i18n.ts  main.tsx  styles.css  vite-env.d.ts  wasm.ts
desktop/src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/components/: CombineForm.tsx  KeytipsOverlay.tsx  LiveRegion.tsx  PasteButton.tsx  SplitForm.tsx
desktop/src/hooks/: useKeyboardShortcuts.ts  useLiveRegion.ts
docs/: AGENTS.md
docs/agents/: checks.md  conventions.md  tauri-desktop-plan.md  tauri-desktop-webui-parity-plan.md
docs/deployment/: AGENTS.md  cloudflare-workers.md
docs/dev/: AGENTS.md  README.md  architecture.md  change-checklist.md  feature-matrix.md  generated-artifacts.md  onboarding.md  troubleshooting.md  verification.md  workflows.md
docs/dev/manuals/: AGENTS.md  README.md  cli-automation.md  rust-library.md
docs/dev/surfaces/: AGENTS.md  cli.md  core.md  desktop.md  help-docs.md  macos.md  mobile.md  release.md  tui.md  wasm.md  web.md  windows.md
explainer/: AGENTS.md  README.md  SCRIPT.md  package-lock.json  package.json
explainer/src/: Root.tsx  SafepartsExplainer.tsx  styles.css
macos/: .gitignore  AGENTS.md  Package.swift  README.md
macos/Release/: Info.plist.in
macos/Sources/SafepartsKit/: Generated.swift  Model.swift
macos/Sources/SafepartsMac/: App.swift
macos/Tests/SafepartsKitTests/: ModelTests.swift
macos/scripts/: package-release.sh  prepare.sh  validate-release.sh  verify-binary.sh
mobile/: .gitignore  AGENTS.md  App.tsx  EAS.md  README.md  app.json  eas.json  package.json  tsconfig.json
mobile/bridge/: README.md
mobile/modules/safeparts-core/: expo-module.config.json  package.json
mobile/scripts/: ffi_spike.ts
mobile/src-native/: Cargo.toml  build.rs
mobile/src-native/src/: lib.rs  safeparts_mobile_bridge.udl
mobile/src/app/: AppRoot.tsx
mobile/src/components/: QrModal.tsx  QrScannerModal.tsx  ScreenHeader.tsx
mobile/src/core/: encodings.ts  errors.ts  reduced_motion.ts  safeparts.ts  text.ts
mobile/src/i18n/: i18n.tsx
mobile/src/screens/: CombineScreen.tsx  SplitScreen.tsx
mobile/store/: README.md
openspec/: AGENTS.md  project.md
openspec/changes/a11y-audit-web-and-docs/: design.md  tasks.md
openspec/changes/add-docker-web-ui/: design.md  proposal.md  tasks.md
openspec/changes/build-and-release-binaries/: design.md  proposal.md  tasks.md
openspec/changes/expo-mobile-app/: design.md  proposal.md  tasks.md
openspec/changes/tutorial-guide/: design.md  proposal.md  tasks.md
openspec/changes/update-english-font-jetbrains-mono/: proposal.md  tasks.md
openspec/specs/bilingual-rtl-accessibility/: spec.md
scripts/: AGENTS.md
scripts/dev/: AGENTS.md  README.md  check_desktop_parity.py  doctor.py  verify_dx.py
scripts/release/: README.md  check-version.py  package.py
web/: .dockerignore  AGENTS.md  Dockerfile  cloudflare-worker.ts  docker-test.sh  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.cjs  vite.config.mjs
web/help/: AGENTS.md  DOCS_MAP.md  DOCS_STYLE.md  README.md  astro.config.mjs  package-lock.json  package.json
web/public/: site.webmanifest
web/scripts/: AGENTS.md  build-wasm.sh
web/src/: AGENTS.md  App.tsx  i18n.ts  main.tsx  shims.d.ts  styles.css  vite-env.d.ts  wasm.ts
web/tests/: AGENTS.md  a11y-utils.ts  docs.a11y.spec.ts  docs.smoke.spec.ts  tsconfig.json  web-app.a11y.spec.ts  web-app.e2e.smoke.spec.ts
windows/: AGENTS.md  Safeparts.slnx
windows/Safeparts.App/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Safeparts.App.csproj  app.manifest
windows/Safeparts.AppModel/: Models.cs  ShareFileNamePolicy.cs  WorkbenchModel.cs
windows/Safeparts.AppModel.Tests/: Safeparts.AppModel.Tests.csproj  WorkbenchModelTests.cs
windows/Safeparts.InteropSmoke/: Program.cs  Safeparts.InteropSmoke.csproj
windows/Safeparts.Native/: NativeSafepartsService.cs  Safeparts.Native.csproj
windows/Safeparts.UiAutomation.Tests/: Safeparts.UiAutomation.Tests.csproj  WorkbenchUiAutomationTests.cs
windows/docs/: accessibility-release-checklist.md
windows/scripts/: launch-package-smoke.ps1  launch-smoke.ps1  package-release.py  prepare.py  validate-release.py  verify-accessibility.py  write-checksum.py
(+107 files in other folders)
