[workspace]
resolver = "2"
members = [
  "crates/safeparts_core",
  "crates/safeparts",
  "crates/safeparts_wasm",
  "crates/safeparts_tui",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = ""

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# Keep clippy strict in CI by running with `-- -D warnings`,
# but avoid enabling `pedantic` repo-wide until APIs stabilize.
