[package]
name = "safeparts"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
safeparts_core = { path = "../safeparts_core" }
zeroize = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[lints]
workspace = true
