[package]
name = "safeparts_core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3 = "1"
rand = "0.8"
thiserror = "2"
zeroize = { version = "1", features = ["alloc"] }
base64 = "0.22"
bs58 = { version = "0.5", features = ["check"] }
bip39 = "2"
argon2 = "0.5"
chacha20poly1305 = "0.10"

[dev-dependencies]
hex = "0.4"

[lints]
workspace = true
