[package]
name = "safeparts_swift"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
safeparts_core = { path = "../safeparts_core" }
uniffi = { version = "0.29.4", features = ["cli"] }
zeroize = "1.8.1"
