[package]
name = "safeparts_tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "safeparts-tui"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arboard = "3.4.1"
base64 = "0.22"
crossterm = "0.27"
ratatui = "0.27.0"
safeparts_core = { path = "../safeparts_core" }
tui-textarea = "0.5.0"
zeroize = "1"

[lints]
workspace = true
