[package]
name = "ssss_mnemo_cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ssss_mnemo_core = { path = "../ssss_mnemo_core" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[lints]
workspace = true
