[package]
name = "ssss_mnemo_core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3 = "1"
rand = "0.8"
thiserror = "2"
zeroize = { version = "1", features = ["alloc"] }
base64 = "0.22"
bs58 = { version = "0.5", features = ["check"] }

[dev-dependencies]
hex = "0.4"

[lints]
workspace = true
