[package]
name = "ssss_mnemo_wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
ssss_mnemo_core = { path = "../ssss_mnemo_core" }

# Required for rand/getrandom on wasm32-unknown-unknown.
getrandom = { version = "0.2", features = ["js"] }

[lints]
workspace = true
