[package]
name = "safeparts_mobile_bridge"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[build-dependencies]
uniffi_build = "0.29"

[dependencies]
anyhow = "1"
safeparts_core = { path = "../../crates/safeparts_core" }
base64 = "0.22"
camino = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uniffi = "0.29"
uniffi_bindgen = "0.29"
zeroize = "1"

[dev-dependencies]
hex = "0.4"

# Intentionally NOT part of the workspace.
# This crate is a mobile-focused bridge layer that will later be wrapped by
# platform-specific native modules.

[workspace]
